# studienarbeit_vlm_dfki

./: .gitignore  CATEGORIZATION_README.md  CLUSTER_SETUP.md  DATASET_ANALYSIS.md  DATASET_STATS.md  FEHLENDE_AUFGABEN_1998_2011.md  FEHLENDE_LÖSUNGEN.md  Gemma-3-12b-it_results.jsonl  Gemma-3-12b-it_summary.xlsx  InternVL3-14B_FailureAnalysis_1run_20260112_195910_nullpred_summary.json  MAPPING_LOGIC.md  OPENAI_ANALYSIS_DOCUMENTATION.md  PDF_EXTRACTION_DOCUMENTATION.md  Qwen2.5-VL-3B-CoT_results.jsonl  Qwen2.5-VL-3B-CoT_summary.xlsx  Qwen2.5-VL-7B-Batch4-Concise_results.jsonl  Qwen2.5-VL-7B-Batch4-Concise_summary.xlsx  README.md  analyse_1998_2011.xlsx  analyse_2012_2025.xlsx  auswertung_aggregiert.csv  dataset_final.json  detailed_model_metrics.csv  eval_results  eval_results.ipynb  evaluation_summary_ex1.csv  filtered_results.csv  lösungen.json  lösungen_1998_2011.json  lösungen_2012_2025.json  metadata.jsonl  model_metrics_for_latex.csv  patch_all_results_jsonl_fields.py  pyproject.toml  qwen3_zero_vs_cot_by_cat_diff_modality.csv  results_accuracy.md  temp_metrics_acc_cov_conf.csv  test.py  test_ocr.py  test_structure_kanguru.jsonl  (+1 more)
data/: comparison_results.json  lösungen_1998_2011.json  lösungen_2012_2025.json  test_lösungen.json
docs/: cluster.md
eval_results/: Gemma-3-12b-it-CoT_results.jsonl  Gemma-3-12b-it-CoT_summary.xlsx  Gemma-3-12b-it_results.jsonl  Gemma-3-12b-it_summary.xlsx  Gemma-3-27b-it-CoT_results.jsonl  Gemma-3-27b-it-CoT_summary.xlsx  Gemma-3-27b-it_results.jsonl  Gemma-3-27b-it_summary.xlsx  Gemma-3-4b-it-CoT_results.jsonl  Ovis2.5-2B_results.jsonl  (+57 more)
(+694 files in other folders)
