[project]
name = "studienarbeit-vlm-dfki"
version = "0.1.0"
description = "Utilities for processing Kangaroo competition solutions."
readme = "README.md"
authors = [
  { name = "Dennis Hug" }
]
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "pymupdf>=1.24",
  "openai>=2.8.0",
  "python-dotenv>=1.0.0",
  "pdf2image>=1.17.0",
]
[tool.uv]

